<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
                             http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

<!--    <parent>-->
<!--        <groupId>org.springframework.boot</groupId>-->
<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
<!--        <version>2.5.1</version>-->
<!--    </parent>-->

    <groupId>com.smachek</groupId>
    <artifactId>stasklist</artifactId>
    <version>0.1</version>

    <modules>
        <module>test-db</module>
        <module>model</module>
        <module>dao</module>
        <module>dao-api</module>
        <module>service</module>
        <module>service-api</module>
        <module>web-app</module>
    </modules>

    <name>STaskList Main Project</name>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.test.result.directory>${project.build.directory}/testResult</project.test.result.directory>
        <junit.unitTest.directory>${project.test.result.directory}/unit</junit.unitTest.directory>
        <junit.integrationTest.directory>${project.test.result.directory}/integration</junit.integrationTest.directory>

        <org.springframework.version>5.3.8</org.springframework.version>
        <version.springframework.boot>2.5.2</version.springframework.boot>
        <thymeleaf-spring5.version>3.0.12.RELEASE</thymeleaf-spring5.version>
        <logback.version>1.2.3</logback.version>
        <version.slf4j>1.7.30</version.slf4j>
        <junit.version>5.7.1</junit.version>
        <version.maven-surefire-plugin>3.0.0-M5</version.maven-surefire-plugin>
        <version.maven-failsafe-plugin>3.0.0-M5</version.maven-failsafe-plugin>
        <version.hamcrest>1.3</version.hamcrest>
        <version.hamcrest-date>1.1.0</version.hamcrest-date>
        <version.commons-lang3>3.8</version.commons-lang3>
    </properties>

    <dependencyManagement>
        <dependencies>

            <!-- Local -->
            <dependency>
                <groupId>com.smachek</groupId>
                <artifactId>model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.smachek</groupId>
                <artifactId>dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.smachek</groupId>
                <artifactId>dao-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.smachek</groupId>
                <artifactId>test-db</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.smachek</groupId>
                <artifactId>service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.smachek</groupId>
                <artifactId>service-api</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Spring -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-framework-bom</artifactId>
                <version>${org.springframework.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${version.springframework.boot}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-web</artifactId>-->
<!--                <version>${version.springframework.boot}</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-starter-thymeleaf</artifactId>-->
<!--                <version>${version.springframework.boot}</version>-->
<!--            </dependency>-->

            <dependency>
                <groupId>javax.servlet</groupId>
                <artifactId>javax.servlet-api</artifactId>
                <version>4.0.0</version>
                <scope>provided</scope>
            </dependency>

            <!-- Logging -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${version.slf4j}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <!-- Test -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-api</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-all</artifactId>
                <version>${version.hamcrest}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.exparity</groupId>
                <artifactId>hamcrest-date</artifactId>
                <version>${version.hamcrest-date}</version>
                <scope>test</scope>
            </dependency>

            <!-- Thymeleaf -->
            <dependency>
                <groupId>org.thymeleaf</groupId>
                <artifactId>thymeleaf-spring5</artifactId>
                <version>${thymeleaf-spring5.version}</version>
            </dependency>

            <!-- DB -->
            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>1.4.200</version>
            </dependency>

            <!-- Other -->
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${version.commons-lang3}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <compilerArgs>
<!--                            <arg>-Xlint:unchecked</arg>-->
                        </compilerArgs>
                    </configuration>
                </plugin>

                <!-- Jetty  -->
                <plugin>
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-maven-plugin</artifactId>
                    <version>10.0.2</version>
                    <configuration>
                        <scan>3</scan>
                        <webApp>
                            <contextPath>/</contextPath>
                        </webApp>
                    </configuration>
                </plugin>

                <!-- Tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.maven-surefire-plugin}</version>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <reportsDirectory>${junit.unitTest.directory}</reportsDirectory>
                        <excludes>
                            <exclude>**/*IT</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${version.maven-failsafe-plugin}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <runOrder>alphabetical</runOrder>
                        <reportsDirectory>${junit.integrationTest.directory}</reportsDirectory>
                        <argLine>
                            --illegal-access=permit
                        </argLine>
                        <includes>
                            <include>**/*IT</include>
                        </includes>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>
    </build>
</project>
